--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -3,5 +3,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.11.2"
+  },
+  "dependencies": {
+    "@abacus-network/app": "^0.4.2-processtest"
   }
 }
