dirty push late of injected script parsing tx

--- a/extension/src/manifest.json
+++ b/extension/src/manifest.json
@@ -1,6 +1,5 @@
 {
-  "name": "Chrome Extension Webpack",
-  "options_page": "options.html",
+  "name": "Booooomerang",
   "background": {
     "page": "background.html"
   },
