--- a/extension/package.json
+++ b/extension/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-webpack",
+  "name": "booooomerang",
   "version": "0.0.1",
-  "description": "A boilerplate to chrome extension with webpack",
+  "description": "Boomerang",
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js"
@@ -21,6 +21,7 @@
     "write-file-webpack-plugin": "4.5.1"
   },
   "dependencies": {
-    "@opengsn/provider": "^3.0.0-beta.1"
+    "@opengsn/provider": "^3.0.0-beta.1",
+    "ethers": "^5.7.1"
   }
 }
