--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.11.2"
   },
   "dependencies": {
-    "@abacus-network/app": "^0.4.2-processtest"
+    "@abacus-network/app": "^0.4.2-processtest",
+    "@opengsn/contracts": "^3.0.0-beta.1"
   }
 }
