--- a/extension/package.json
+++ b/extension/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@opengsn/provider": "^3.0.0-beta.1",
-    "ethers": "^5.7.1"
+    "ethers": "^5.7.1",
+    "web3": "^1.8.0"
   }
 }
