--- a/extension/src/manifest.json
+++ b/extension/src/manifest.json
@@ -19,7 +19,7 @@
       "js": ["content.bundle.js"]
     }
   ],
-  "web_accessible_resources" : ["/injected.bundle.js"],
+  "web_accessible_resources" : ["/call_logger.bundle.js", "/boomerang.bundle.js"],
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
