--- a/extension/package.json
+++ b/extension/package.json
@@ -21,6 +21,7 @@
     "write-file-webpack-plugin": "4.5.1"
   },
   "dependencies": {
+    "@gelatonetwork/relay-sdk": "^2.0.0",
     "@opengsn/provider": "^3.0.0-beta.1",
     "ethers": "^5.7.1",
     "web3": "^1.8.0"
