--- a/extension/src/manifest.json
+++ b/extension/src/manifest.json
@@ -3,42 +3,31 @@
   "version": "0.0.1",
   "homepage_url": "https://github.com/LaGuerrePiece/Project-Boomerang",
   "manifest_version": 3,
-  "background": {
-    "service_worker": "background.bundle.js"
-  },
+  "options_page": "options.html",
+  "background": { "service_worker": "background.bundle.js" },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": "icon-34.png"
   },
   "icons": {
     "128": "icon-128.png"
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.bundle.js"]
+      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
+      "js": ["contentScript.bundle.js"],
+      "css": ["content.styles.css"]
     }
   ],
-  "permissions": [
-    "declarativeNetRequest",
-    "declarativeNetRequestWithHostAccess",
-    "declarativeNetRequestFeedback"
-  ],
-  "host_permissions": [
-    "<all_urls>",
-    "*://*.google.com/*",
-    "*://*.uniswap.org/*",
-    "*://*.abcd.com/*",
-    "*://*.example.com/*",
-    "https://*.xyz.com/*",
-    "*://*.headers.com/*",
-    "*://app.uniswap.org/*",
-    "https://mainnet.infura.io/v3/"
-  ],
-  "web_accessible_resources": [{
-    "resources": ["/call_logger.bundle.js", "/boomerang.bundle.js"],
-    "matches": ["<all_urls>"]
-  }],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; connect-src 'self' https://mainnet.infura.io/v3/"
-  }
+  "devtools_page": "devtools.html",
+  "web_accessible_resources": [
+    {
+      "resources": ["content.styles.css", "icon-128.png", "icon-34.png"],
+      "matches": []
+    },
+    {
+      "resources": ["/call_logger.bundle.js", "/boomerang.bundle.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
